--- a/presentation/src/main/res/layout/activity_file_preview_viewpager.xml
+++ b/presentation/src/main/res/layout/activity_file_preview_viewpager.xml
@@ -21,7 +21,7 @@
         android:id="@+id/viewpage_title"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/white">
+        android:background="@color/color_appbar">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/btn_back"
@@ -29,10 +29,10 @@
             android:layout_height="@dimen/_30sdp"
             android:layout_centerVertical="true"
             android:layout_marginStart="@dimen/_15sdp"
-            android:background="@drawable/bg_setting_button"
+            android:background="@drawable/bg_icon_button"
             android:padding="@dimen/_5sdp"
             android:src="@drawable/ic_round_arrow_back_ios_24"
-            app:tint="#777aa1" />
+            app:tint="@color/color_tint_icon" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/file_hide_txt_title"
@@ -59,19 +59,19 @@
                 android:layout_width="@dimen/_30sdp"
                 android:layout_height="@dimen/_30sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
-                android:background="@drawable/bg_setting_button"
+                android:background="@drawable/bg_icon_button"
                 android:padding="@dimen/_5sdp"
                 android:src="@drawable/ic_rotate_right_24"
-                app:tint="#777aa1" />
+                app:tint="@color/color_tint_icon" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/pic_hide_img_del"
                 android:layout_width="@dimen/_30sdp"
                 android:layout_height="@dimen/_30sdp"
-                android:background="@drawable/bg_setting_button"
+                android:background="@drawable/bg_icon_button"
                 android:padding="@dimen/_5sdp"
                 android:src="@drawable/ic_delete_24"
-                app:tint="#777aa1" />
+                app:tint="@color/color_tint_icon" />
         </LinearLayout>
     </RelativeLayout>
 
