--- a/presentation/src/main/res/layout/activity_language_start.xml
+++ b/presentation/src/main/res/layout/activity_language_start.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#F2F2F2"
     android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/frameHeader"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:background="@color/white">
+        android:background="@color/color_appbar">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvHeader"
@@ -28,10 +27,10 @@
             android:layout_height="@dimen/_30sdp"
             android:layout_gravity="center_vertical|end"
             android:layout_marginEnd="@dimen/_15sdp"
-            app:tint="#4B944D"
-            android:background="@drawable/bg_setting_button"
+            android:background="@drawable/bg_icon_button"
             android:padding="@dimen/_5sdp"
-            android:src="@drawable/ic_check" />
+            android:src="@drawable/ic_check"
+            app:tint="#4B944D" />
 
     </FrameLayout>
 
