--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -42,7 +42,13 @@
 
     <color name="color_toolbar_hide_file">#6750A3</color>
     <color name="title_setting_item">#E66750A3</color>
-    <color name="color_text_primary">#1B1D21</color>
+    <color name="color_text_primary">#FFFFFF</color>
     <color name="color_background_primary">#FFFFFF</color>
     <color name="colorGray">#BFBFBF</color>
+
+    <color name="color_appbar">#6750A3</color>
+    <color name="color_divider">#D9D9D9</color>
+
+    <color name="color_tint_icon">#6750A3</color>
+    <color name="color_bg_icon">#FFFFFF</color>
 </resources>
